test/fail/parsing_error_no_main_class.j
class Dummy {
  Void dummy() { return 1; }
}
